@@ -2,7 +2,7 @@
 var FS = require("q-fs");
 var BOOT = require("fs-boot");
 var COMMON = require("./common");
-var Q = require("q");
+var Q = require("q/util");
 
 var Fs = exports.Fs = function (files) {
     var fs = Object.create(BOOT);
@@ -13,11 +13,11 @@ var Fs = exports.Fs = function (files) {
         // construct a file tree
         Object.keys(files).forEach(function (path) {
             var content = files[path];
-            find(path).set(content);
+            find(root, path).set(content);
         });
     }
 
-    function find(path) {
+    function find(at, path) {
         path = fs.absolute(path);
         if (path === "" || path === FS.ROOT) {
             return Node(function get() {
@@ -26,7 +26,6 @@ var Fs = exports.Fs = function (files) {
                 root = content;
             });
         }
-        var at = root;
         var parts = FS.split(path);
         var empty = parts.shift();
         if (empty !== "")
@@ -64,15 +63,18 @@ var Fs = exports.Fs = function (files) {
         return Q.when(fs.stat(path), function (stat) {
             if (!stat.isDirectory())
                 throw new Error("Cannot list non-directory " + path);
-            var node = find(path).get();
+            var node = find(root, path).get();
             return Object.keys(node);
         });
     };
 
     fs.open = function (path, flags, charset) {
-        var node = find(path);
+        var node = find(root, path);
         // TODO create an actual open file object, rather
         // than this rather primitive duck
+        flags = flags || "r";
+        var binary = flags.indexOf("b") >= 0;
+        charset = charset || "utf-8";
         var stat = fs.stat(path);
         var isFile = Q.post(stat, 'isFile');
         return Q.when(isFile, function (isFile) {
@@ -82,7 +84,7 @@ var Fs = exports.Fs = function (files) {
             return {
                 "read": function () {
                     var content = node.get();
-                    if (charset)
+                    if (!binary)
                         content = content.toString(charset);
                     return content;
                 }
@@ -91,14 +93,15 @@ var Fs = exports.Fs = function (files) {
     };
 
     fs.stat = function (path) {
-        var stat = find(path);
+        var stat = find(root, path);
         if (stat.get() === undefined)
             return Q.reject("No such file: " + path);
         return stat;
     };
 
-    fs.getRoot = function () {
-        return root;
+    fs.getNode = function (path) {
+        path = path || "";
+        return find(root, path).get();
     };
 
     fs.canonical = function (path) {
@@ -152,22 +155,47 @@ GenericNode.prototype.isDirectory = function () {
     )
 };
 
-function main() {
-    var fs = Fs({
-        "a/b/1": "ab1",
-        "a/b/2": "ab2",
-        "a/b/3/a": "ab3a",
-        "a/b/3/b": "ab3b"
+exports.read = function (fs, root) {
+    return Q.when(fs.listTree(root), function (list) {
+        var tree = {};
+        var done;
+        list.forEach(function (path) {
+            var actual = fs.join(root, path);
+            var relative = fs.relativeFromDirectory(root, actual);
+            var partial = Q.when(fs.stat(actual), function (stat) {
+                if (stat.isFile()) {
+                    tree[relative] = fs.read(path, "rb");
+                }
+            });
+            done = Q.when(done, function () {
+                return partial;
+            });
+        });
+        return Q.when(done, function () {
+            return Q.when(Q.shallow(tree), Fs);
+        });
     });
-    console.log(fs.getRoot());
-    Q.when(fs.stat("a")).then(function (stat) {
-        console.log('stat', stat.isDirectory());
-    });
-    fs.isDirectory("a").then(console.log);
-    fs.listTree(".").then(console.log);
-    Q.when(fs.read("a/b/1"), console.log);
-}
+};
 
-if (require.main === module)
-    main();
+exports.merge = function (fss) {
+    var tree = {};
+    var done;
+    fss.forEach(function (fs) {
+        // fetch lists in parallel
+        var list = fs.listTree("", function (path, stat) {
+            return stat.isFile();
+        });
+        // merge each fs serially
+        done = Q.when(done, function () {
+            return Q.when(list, function (list) {
+                list.forEach(function (path) {
+                    tree[path] = fs.read(path, "rb");
+                });
+            });
+        });
+    });
+    return Q.when(done, function () {
+        return Q.when(Q.shallow(tree), Fs);
+    });
+};
 
