@@ -85,7 +85,7 @@ var Fs = exports.Fs = function (outer, root) {
 
     return Q.when(outer.canonical(root), function (_root) {
         root = _root;
-        return inner;
+        return Object.freeze(inner);
     });
 };
 
